--- a/index.html
+++ b/index.html
@@ -3,84 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Для неё</title>
+    <title>Сайт для твоей девушки</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Плавающие слова -->
-    <div class="floating-words left">
-        <span>Невероятна</span>
-        <span>Шедевр</span>
-        <span>Умница</span>
-        <span>Вдохновение</span>
-        <span>Очарование</span>
-        <span>Улыбка</span>
-        <span>Свет</span>
-        <span>Тепло</span>
-        <span>Мечта</span>
-        <span>Счастье</span>
-        <span>Сияние</span>
-        <span>Талант</span>
-        <span>Красота</span>
-        <span>Доброта</span>
-        <span>Чудо</span>
-    </div>
-    <div class="floating-words right">
-        <span>Светлое будущее</span>
-        <span>Чудесный мир</span>
-        <span>Волшебство</span>
-        <span>Нежность</span>
-        <span>Радость</span>
-        <span>Смех</span>
-        <span>Любовь</span>
-        <span>Теплота</span>
-        <span>Надежда</span>
-        <span>Успех</span>
-        <span>Позитив</span>
-        <span>Творчество</span>
-        <span>Энергия</span>
-        <span>Гармония</span>
-        <span>Счастливый миг</span>
+
+    <div class="hero">
+        <h1>Дорогая Виола!</h1>
+        <p>Ты - невероятная, умная и добрая девочка!</p>
     </div>
 
-    <!-- Главная страница -->
-    <section class="hero">
-        <h1>Ты — это свет, который озаряет мир</h1>
-        <p>Ты уникальна! Твоя доброта, ум и красота вдохновляют всех вокруг.</p>
-    </section>
+    <div class="biography">
+        <h2>Ты...</h2>
+        <p>Ты всегда была рядом, поддерживала меня на ментальном уровне. Твоя доброта согревает — как тёплое солнце после дождя. Ты — шедевр, который радует мою жизнь!</p>
+    </div>
 
-    <!-- Биография -->
-    <section class="biography">
-        <h2>Кто ты</h2>
-        <p>Ты — невероятная личность, которая всегда найдёт время поддержать и помочь. Твоя доброта — это настоящий дар, а ум — это свет, который освещает путь в самые тёмные дни. Ты — пример для всех, кто тебя знает!</p>
-    </section>
-
-    <!-- Галерея без заголовка -->
-    <section class="gallery">
+    <div class="gallery">
         <div class="gallery-item">
-            <img src="1.jpg" alt="Добрая">
-            <p class="description" data-text="Твоя доброта согревает — как тёплое солнце после дождя."></p>
+            <img src="1.jpg" alt="Фото 1">
+            <p class="description" data-text="Ты — невероятная, как утреннее солнце!"></p>
         </div>
         <div class="gallery-item">
-            <img src="2.jpg" alt="Умная">
-            <p class="description" data-text="Твой ум озаряет всё вокруг — ты всегда знаешь, как найти правильный путь."></p>
+            <img src="2.jpg" alt="Фото 2">
+            <p class="description" data-text="Твоя улыбка — лучшее лекарство!"></p>
         </div>
         <div class="gallery-item">
-            <img src="3.jpg" alt="Красивая">
-            <p class="description" data-text="Твоя красота притягательна — как волшебство, которое не перестаёт восхищать."></p>
+            <img src="3.jpg" alt="Фото 3">
+            <p class="description" data-text="Ты — свет в моём мире!"></p>
         </div>
-    </section>
+    </div>
 
-    <!-- Заключительный раздел -->
-    <section class="final-thoughts">
-        <p>Ты — уникальный дар для всех, кто знает тебя. Ты приносишь радость и свет своим присутствием...</p>
-    </section>
+    <div class="final-thoughts">
+        <h2>Заключительные мысли</h2>
+        <p>Твоя доброта и красота вдохновляют меня каждый день. Спасибо за то, что ты есть!</p>
+    </div>
 
-    <!-- Подпись "от бро" -->
-    <footer class="footer">
-        <p>от бро</p>
-    </footer>
+    <div class="footer">от бро</div>
 
-    <script src="script.js"></script> <!-- Подключаем JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
